force-app/main/default/objects/Track_Log__c/Track_Log__c.object-meta.xml
<CustomObject>
    <description>This Object is created to track the request, response logs, error logs.</description>
    <label>Track Log</label>
    <nameField>
        <displayFormat>TL-{0000}</displayFormat>
        <label>TL_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Track Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>