force-app/main/default/objects/Track_Log__c/fields/API_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Type__c</fullName>
    <inlineHelpText>Indicates the type of API (Ex. Contact Update, Track).</inlineHelpText>
    <label>API Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact_Update</fullName>
                <label>Contact Update</label>
            </value>
            <value>
                <fullName>Track</fullName>
            </value>
            <value>
                <fullName>Config_Update</fullName>
                <label>Config Update</label>
            </value>
            <value>
                <fullName>ICP Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>