force-app/main/default/objects/Track_Log__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <inlineHelpText>It stores the error received in API.</inlineHelpText>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>