force-app/main/default/objects/Track_Log__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <inlineHelpText>Indicates the request JSON sent to Kanlet.</inlineHelpText>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>