force-app/main/default/objects/Track_Log__c/fields/Request_Date1__c.field-meta.xml
<CustomField>
    <fullName>Request_Date1__c</fullName>
    <label>Request Date</label>
    <type>DateTime</type>
</CustomField>