force-app/main/default/objects/Track_Log__c/fields/Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Time_Stamp__c</fullName>
    <inlineHelpText>Indicates the Date &amp; Time when the request is sent.</inlineHelpText>
    <label>Time Stamp</label>
    <type>DateTime</type>
</CustomField>