force-app/main/default/objects/Track_Log__c/fields/Track_Request__c.field-meta.xml
<CustomField>
    <fullName>Track_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Track Request</label>
    <referenceTo>Track_Request__c</referenceTo>
    <relationshipLabel>Track Logs</relationshipLabel>
    <relationshipName>Track_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>