force-app/main/default/objects/Track_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>API_Type__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Error__c</columns>
    <columns>Request_Date1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>