force-app/main/default/objects/Track_Log__c/listViews/Contact_Update_Logs.listView-meta.xml
<ListView>
    <fullName>Contact_Update_Logs</fullName>
    <columns>NAME</columns>
    <columns>API_Type__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>Status__c</columns>
    <columns>Error__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Type__c</field>
        <operation>equals</operation>
        <value>Contact_Update</value>
    </filters>
    <label>Contact Update Logs</label>
</ListView>