force-app/main/default/objects/Track_Log__c/listViews/License_Update.listView-meta.xml
<ListView>
    <fullName>License_Update</fullName>
    <columns>NAME</columns>
    <columns>API_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Type__c</field>
        <operation>equals</operation>
        <value>Config_Update</value>
    </filters>
    <label>Config Update Logs</label>
</ListView>