force-app/main/default/objects/Track_Log__c/listViews/Track_Rquest_Log.listView-meta.xml
<ListView>
    <fullName>Track_Rquest_Log</fullName>
    <columns>NAME</columns>
    <columns>API_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>Status__c</columns>
    <columns>Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Type__c</field>
        <operation>equals</operation>
        <value>Track</value>
    </filters>
    <label>Track Request Log</label>
</ListView>